# flare.rs

./: LICENSE  README.md
d3-core/: Cargo.toml  notes.txt  todo.txt
d3-core/.cargo/: config.toml
d3-core/benches/: benchmark.rs
d3-core/src/: common.rs  endianess.rs  game_client.rs  lib.rs  osirus.rs  osirus_omms.rs  rand.rs  string.rs  string_common.rs  test_common.rs
d3-core/src/filesystem/: gamefs.rs  hog.rs  lazy.rs  mod.rs
d3-core/src/game/: ambient_life.rs  audio.rs  context.rs  core.rs  door.rs  effects.rs  events.rs  mod.rs  node.rs  object.rs  object_dynamic_behavior.rs  object_physics.rs  object_static_behavior.rs  prelude.rs  room.rs  scripting.rs  terrain.rs  weapon.rs  weather.rs
d3-core/src/game/physics/: collide.rs  intersection.rs  mod.rs
d3-core/src/game/visual_effects/: fireball.rs  mod.rs
d3-core/src/graphics/: bumpmap.rs  dd_video.rs  detail_settings.rs  generic_bitmap.rs  lightmap.rs  mod.rs  polymodel.rs  render_context.rs  rendering.rs  texture.rs
d3-core/src/graphics/bitmap/: image_format_iff.rs  image_format_ogf.rs  image_format_pcx.rs  mod.rs  videoclip.rs
d3-core/src/graphics/drawing_2d/: font.rs  mod.rs  text.rs
d3-core/src/graphics/drawing_3d/: conversions.rs  legacy_soft.rs  mod.rs
d3-core/src/graphics/procedural/: effect_cone.rs  effect_fall.rs  effect_fire.rs  effect_fountain.rs  effect_lightning.rs  effect_random_ember.rs  effect_rising_ember.rs  effect_roamer.rs  (+4 more)
d3-core/src/math/: angle.rs  matrix.rs  mod.rs  vector.rs  vector2d.rs
d3-core/src/retail/: assets.rs
d3-playbox/: Cargo.toml
d3-playbox/src/: main.rs  rend_soft_options.rs  ui.rs
(+27 files in other folders)
