[package]
name = "d3-core"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.21"
bitflags = "2.5.0"
lazy_static = "1.4.0"
swapbytes = "0.2"
byteorder = "1.4.3"
anyhow = "1.0.86"
tinyrand = "0.5.0"
tinyrand-std = { version = "0.5.0", optional = true }
bitfield = "0.15.0"
paste = "1.0.15"
strum = "0.26.3"
strum_macros = "0.26.4"
gametype-macro = { path = "../gametype-macro" }
blake3 = "1.5.4"
once_cell = "1.20.2"
derive_builder = "0.20.2"
typed-builder = "0.20.0"
vek = "0.17.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
env_logger = "0.11.3"
md5 = "0.7.0"
minifb = "0.27.0"
function_name = "0.3.0"
criterion = { version = "0.4", features = ["html_reports"] }

#[package.metadata.vcpkg]
#dependencies = ["ffmpeg"]
#git = "https://github.com/microsoft/vcpkg"
#rev = "943c5ef1c8f6b5e6ced092b242c8299caae2ff01"

#[dependencies.rsmpeg]
#version = "0.15.0"
#default-features = false
#optional = true
#features = ["ffmpeg6"]

[features]
#default = ["with_ffmpeg"]
default = ["std"]
#with_ffmpeg = ["rsmpeg"]
bitmap_testview = []
std = ["tinyrand-std"]
retail_testing = []
dedicated_server = []

[[bench]]
name = "benchmark"
harness = false
